gcc/testsuite/gm2/pim/fail/forloopby.mod
MODULE forloopby ;


PROCEDURE init ;
CONST
   increment = CARDINAL (1) ;
VAR
   i: INTEGER ;
BEGIN
   FOR i := 0 TO 10 BY increment DO
   END
END init ;


BEGIN
   init
END forloopby.
